Create the UI and component

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/webp" href="/images/favicon.webp" />
     <meta name="robots" content="noindex, nofollow" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>[TITRE]</title>
+    <title>BOOKMARK SIGNET</title>
   </head>
   <body>
     <div id="racine"></div>
